--- a/test/one.html
+++ b/test/one.html
@@ -4,6 +4,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/rrweb-player@latest/dist/style.css" />
     <script async src="../dist/br.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<style>
+body {
+  background: red;
+}
+</style>
     <script>
       $(document).ready(function(){
         $("p").click(function(){
